<resources>
    <string name="app_name">FilamentDemo</string>

    <!-- Door controls -->
    <string name="open_left_door">Open Left Door</string>
    <string name="close_left_door">Close Left Door</string>
    <string name="open_right_door">Open Right Door</string>
    <string name="close_right_door">Close Right Door</string>

    <!-- Light controls -->
    <string name="open_front_light">Open Front Light</string>
    <string name="close_front_light">Close Front Light</string>
    <string name="open_rear_light">Open Rear Light</string>
    <string name="close_rear_light">Close Rear Light</string>
    <string name="open_turn_signal">Open Turn Signal</string>
    <string name="close_turn_signal">Close Turn Signal</string>
    <string name="left_turn">Left Turn</string>
    <string name="right_turn">Right Turn</string>
    <string name="brake">Brake (Hold)</string>
    <string name="light_dir_adjust">Light Dir</string>
    <string name="light_pos_adjust">Light Pos</string>
    <string name="reset">Reset</string>

    <!-- Drive controls -->
    <string name="drive_start">Start</string>
    <string name="drive_stop">Stop</string>
    <string name="throttle">Throttle (Hold)</string>

    <!-- Car skin -->
    <string name="skin_switch">Skin</string>
</resources>